# TikTokSlideshow-Downloader

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  requirements.txt  tiktok-downloader.py  tiktokslideshow-download.py
.github/: dependabot.yml
.github/workflows/: dependabot-automerge.yml  lint-test.yml  pre-commit-autoupdate.yml
tests/: test_base_extractor.py  test_chrome_user_paths.py  test_cli.py  test_config.py  test_cookie_manager.py  test_cookie_manager_extra.py  test_cookies_auto.py  test_cookies_expires.py  test_cookies_login.py  test_cookies_verify.py  test_downloader.py  test_logger.py  test_profile_scraper.py  test_slideshow_extractor.py  test_url_parser.py  test_utils.py  test_video_extractor.py
tiktok_downloader/: __init__.py  __main__.py  cli.py  config.py  cookies.py  downloader.py  logger.py  profile.py  url_parser.py  utils.py
tiktok_downloader/extractors/: __init__.py  base.py  slideshow.py  video.py
