[project]
name = "tiktok-downloader"
version = "0.1.0"
description = ""
authors = [{ name = "peppapig450", email = "peppapig450@pm.me" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11,<=3.13"
dependencies = [
    "playwright (>=1.51.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "yt-dlp (>=2025.3.31,<2026.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "platformdirs (>=4.3.7,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
mypy = "^1.15.0"
ruff = "^0.11.6"
types-requests = "^2.32.0.20250328"
